# todo-cloud

./: README.md  TODO.md
go/: .gitignore  go.mod  go.sum  main.go
go/lib/: config.go  encryption.go
rs/: .gitignore  Cargo.toml
rs/src/: config.rs  error.rs  gcp.rs  main.rs
tf/: .gitignore  gcp_bucket.tf  variable.tf
