[package]
name = "todo-cloud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.145", features = ["derive"] }
futures = "0.3.24"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
confy = "0.5.0"
magic-crypt = "3.1.10"
gcloud-sdk = { version = "0.19.4", features = ["google-rest-storage-v1"] }